--- a/locale/en.txt
+++ b/locale/en.txt
@@ -3,20 +3,20 @@
 ## Action
 
 ### URL
-PopupWebFrameBehaviour_8AB66610_AF54_E62A_41A1_C54879D56293.url = https://blackpistol.setmore.com/
 PopupWebFrameBehaviour_D5CA5AA0_C159_F44E_41E4_D091E4469E0A.url = https://blackpistol.setmore.com/
+PopupWebFrameBehaviour_8AB66610_AF54_E62A_41A1_C54879D56293.url = https://blackpistol.setmore.com/
 PopupWebFrameBehaviour_9A855F67_B0BC_66F6_41D5_3BA1AA2FEF67.url = https://blackpistol.setmore.com/bookappointment
 PopupWebFrameBehaviour_89E83427_AF7C_BA76_41C3_7FD258A23ACE.url = https://blackpistol.setmore.com/bookappointment
 PopupWebFrameBehaviour_8A4AC221_AF7C_DE6A_41D9_A5348516C2B8.url = https://blackpistol.setmore.com/bookappointment
 PopupWebFrameBehaviour_9B5B795C_B0BC_AADB_41B3_F547B1A8C1A0.url = https://blackpistol.setmore.com/bookappointment
-LinkBehaviour_87584B10_9563_F738_41D6_8DF69585665C.source = https://hermesview.com/
 LinkBehaviour_D5CB4A99_C159_F47E_41E3_C05673D50908.source = https://hermesview.com/
-LinkBehaviour_DA9BBDA3_D455_14FF_41DC_2F5319401151.source = https://www.facebook.com/Blackpistolbarbershop
-LinkBehaviour_D535DA92_C159_F473_41D7_E2277249322C.source = https://www.facebook.com/Blackpistolbarbershop/?locale=el_GR
-LinkBehaviour_DA6EC049_D457_2C4A_41D2_E9E67CA5E58E.source = https://www.google.com/maps/place/Blackpistol+Barbershop/@37.9579717,23.7231442,17z/data=!3m1!4b1!4m6!3m5!1s0x14a1bd46f04b2e43:0xb257c6073028aa72!8m2!3d37.9579675!4d23.7257191!16s%2Fg%2F11fpq6rwzb?entry=ttu
-LinkBehaviour_D5344A96_C159_F473_41E0_D21C330BFBFE.source = https://www.google.com/maps/place/Blackpistol+Barbershop/@37.9579717,23.7231442,17z/data=!3m1!4b1!4m6!3m5!1s0x14a1bd46f04b2e43:0xb257c6073028aa72!8m2!3d37.9579675!4d23.7257191!16s%2Fg%2F11fpq6rwzb?entry=ttu
-LinkBehaviour_DA9C2355_D457_2C5B_41B0_DBEAB509B63F.source = https://www.instagram.com/blackpistol.barbers/
-LinkBehaviour_D5351A94_C159_F477_41DA_77720F6D7528.source = https://www.instagram.com/blackpistol.barbers/
+LinkBehaviour_87584B10_9563_F738_41D6_8DF69585665C.source = https://hermesview.com/
+PopupWebFrameBehaviour_E3BF44BA_F419_5005_41BC_DD3070E642EB.url = https://www.facebook.com/Blackpistolbarbershop
+PopupWebFrameBehaviour_E3D541C4_F41F_D00D_41E2_84E2D7EB8E3E.url = https://www.facebook.com/Blackpistolbarbershop
+PopupWebFrameBehaviour_EC13C098_F419_5005_41D0_1526BA35F2D0.url = https://www.google.com/maps/place/Blackpistol+Barbershop/@37.9579717,23.7231442,17z/data=!3m1!4b1!4m6!3m5!1s0x14a1bd46f04b2e43:0xb257c6073028aa72!8m2!3d37.9579675!4d23.7257191!16s%2Fg%2F11fpq6rwzb?entry=ttu
+PopupWebFrameBehaviour_E3493BD2_F41E_D005_41C5_650DACE96702.url = https://www.google.com/maps/place/Blackpistol+Barbershop/@37.9579717,23.7231442,17z/data=!3m1!4b1!4m6!3m5!1s0x14a1bd46f04b2e43:0xb257c6073028aa72!8m2!3d37.9579675!4d23.7257191!16s%2Fg%2F11fpq6rwzb?entry=ttu
+PopupWebFrameBehaviour_EC002892_F419_F005_41E7_88CB4B6DC543.url = https://www.instagram.com/blackpistol.barbers/
+PopupWebFrameBehaviour_E35DF595_F41E_B00F_41E6_B36079A749A5.url = https://www.instagram.com/blackpistol.barbers/
 
 ## Media
 
@@ -280,28 +280,28 @@ album_87BA7B7F_AF7B_EED6_41D1_DBB5F5BCDA20_7.label = photo_2024-05-25_16-04-36
 album_87BA7B7F_AF7B_EED6_41D1_DBB5F5BCDA20_8.label = photo_2024-05-25_16-04-41
 
 ### Video
-videolevel_E2867B49_F409_7007_418D_E17B29C15C6F.url = media/video_802928BF_AFD4_AA55_41DE_7F4040C56C7D_en.mp4
-videolevel_E2867B49_F409_7007_418D_E17B29C15C6F.posterURL = media/video_802928BF_AFD4_AA55_41DE_7F4040C56C7D_poster_en.jpg
-videolevel_E28E7C65_F409_700F_41D5_F3CB27E336E2.url = media/video_887F3BDC_AF5C_EDDB_41BC_6B40D630B705_en.mp4
-videolevel_E28E7C65_F409_700F_41D5_F3CB27E336E2.posterURL = media/video_887F3BDC_AF5C_EDDB_41BC_6B40D630B705_poster_en.jpg
-videolevel_E28CCC0F_F409_701B_41E2_E98253DD4EE7.url = media/video_888E5B2E_AF5C_AE77_41E4_5D52AA727653_en.mp4
-videolevel_E28CCC0F_F409_701B_41E2_E98253DD4EE7.posterURL = media/video_888E5B2E_AF5C_AE77_41E4_5D52AA727653_poster_en.jpg
-videolevel_E2846AE7_F409_700C_41D2_7153DC3C9443.url = media/video_8A430A25_AFD4_AE6A_41C6_1D048E336F1A_en.mp4
-videolevel_E2846AE7_F409_700C_41D2_7153DC3C9443.posterURL = media/video_8A430A25_AFD4_AE6A_41C6_1D048E336F1A_poster_en.jpg
-videolevel_E2810BB4_F409_700D_41E3_6AEDC14F8EEA.url = media/video_9C683F5D_AFB5_A6D5_41DA_58B8C621D6F1_en.mp4
-videolevel_E2810BB4_F409_700D_41E3_6AEDC14F8EEA.posterURL = media/video_9C683F5D_AFB5_A6D5_41DA_58B8C621D6F1_poster_en.jpg
+videolevel_ED25BED9_F41A_D007_41C7_5CE26745299F.url = media/video_802928BF_AFD4_AA55_41DE_7F4040C56C7D_en.mp4
+videolevel_ED25BED9_F41A_D007_41C7_5CE26745299F.posterURL = media/video_802928BF_AFD4_AA55_41DE_7F4040C56C7D_poster_en.jpg
+videolevel_ED3CB007_F41A_F00B_41EC_BFB36ED14821.url = media/video_887F3BDC_AF5C_EDDB_41BC_6B40D630B705_en.mp4
+videolevel_ED3CB007_F41A_F00B_41EC_BFB36ED14821.posterURL = media/video_887F3BDC_AF5C_EDDB_41BC_6B40D630B705_poster_en.jpg
+videolevel_ED219F9B_F41A_D004_41E3_5398EEB7DED2.url = media/video_888E5B2E_AF5C_AE77_41E4_5D52AA727653_en.mp4
+videolevel_ED219F9B_F41A_D004_41E3_5398EEB7DED2.posterURL = media/video_888E5B2E_AF5C_AE77_41E4_5D52AA727653_poster_en.jpg
+videolevel_ED248E82_F41A_D005_41E9_7928DEF230AA.url = media/video_8A430A25_AFD4_AE6A_41C6_1D048E336F1A_en.mp4
+videolevel_ED248E82_F41A_D005_41E9_7928DEF230AA.posterURL = media/video_8A430A25_AFD4_AE6A_41C6_1D048E336F1A_poster_en.jpg
+videolevel_ED264F38_F41A_D005_41A1_B2865C15C728.url = media/video_9C683F5D_AFB5_A6D5_41DA_58B8C621D6F1_en.mp4
+videolevel_ED264F38_F41A_D005_41A1_B2865C15C728.posterURL = media/video_9C683F5D_AFB5_A6D5_41DA_58B8C621D6F1_poster_en.jpg
 
 ### Video Subtitles
 
 ## Popup
 
 ### Body
-htmlText_878637AF_AF4D_E676_41DE_66824D0A072B.html = <div style="text-align:left; color:#000; "><DIV STYLE="text-align:left;font-size:23.999999999999996px;"><SPAN STYLE="display:inline-block; letter-spacing:0px; white-space:pre-wrap;color:#000000;font-family:Arial, Helvetica, sans-serif;"><SPAN STYLE="color:#ffffff;font-size:24px;font-family:'Arial Black', Gadget, sans-serif;">Black Pistol is a barbershop based close to the centre of Athens in a traditional neighbourhood friendly to everyone and so are we! Feel free to come by anytime to take care any of your needs! </SPAN></SPAN></DIV><DIV STYLE="text-align:left;font-size:23.999999999999996px;"><SPAN STYLE="display:inline-block; letter-spacing:0px; white-space:pre-wrap;color:#000000;font-family:Arial, Helvetica, sans-serif;"><SPAN STYLE="color:#ffffff;font-size:24px;font-family:'Arial Black', Gadget, sans-serif;">Crispy Clean Cuts All Day!</SPAN></SPAN></DIV></div>
 htmlText_D5CB4A9D_C159_F476_41DA_4D4506132416.html = <div style="text-align:left; color:#000; "><DIV STYLE="text-align:left;font-size:23.999999999999996px;"><SPAN STYLE="display:inline-block; letter-spacing:0px; white-space:pre-wrap;color:#000000;font-family:Arial, Helvetica, sans-serif;"><SPAN STYLE="color:#ffffff;font-size:24px;font-family:'Arial Black', Gadget, sans-serif;">Black Pistol is a barbershop based close to the centre of Athens in a traditional neighbourhood friendly to everyone and so are we! Feel free to come by anytime to take care any of your needs! </SPAN></SPAN></DIV><DIV STYLE="text-align:left;font-size:23.999999999999996px;"><SPAN STYLE="display:inline-block; letter-spacing:0px; white-space:pre-wrap;color:#000000;font-family:Arial, Helvetica, sans-serif;"><SPAN STYLE="color:#ffffff;font-size:24px;font-family:'Arial Black', Gadget, sans-serif;">Crispy Clean Cuts All Day!</SPAN></SPAN></DIV></div>
+htmlText_878637AF_AF4D_E676_41DE_66824D0A072B.html = <div style="text-align:left; color:#000; "><DIV STYLE="text-align:left;font-size:23.999999999999996px;"><SPAN STYLE="display:inline-block; letter-spacing:0px; white-space:pre-wrap;color:#000000;font-family:Arial, Helvetica, sans-serif;"><SPAN STYLE="color:#ffffff;font-size:24px;font-family:'Arial Black', Gadget, sans-serif;">Black Pistol is a barbershop based close to the centre of Athens in a traditional neighbourhood friendly to everyone and so are we! Feel free to come by anytime to take care any of your needs! </SPAN></SPAN></DIV><DIV STYLE="text-align:left;font-size:23.999999999999996px;"><SPAN STYLE="display:inline-block; letter-spacing:0px; white-space:pre-wrap;color:#000000;font-family:Arial, Helvetica, sans-serif;"><SPAN STYLE="color:#ffffff;font-size:24px;font-family:'Arial Black', Gadget, sans-serif;">Crispy Clean Cuts All Day!</SPAN></SPAN></DIV></div>
 
 ### Title
-window_878667AF_AF4D_E676_41C4_3B5A5CC37B1C.title = Who are we?
 window_D5CB1A9C_C159_F476_41DD_5FE6CDCD0B40.title = Who are we?
+window_878667AF_AF4D_E676_41C4_3B5A5CC37B1C.title = Who are we?
 
 ## Skin
 
